Recreate MediaPermissionDispatcher's service connection on navigation

In r470992 we started closing PermissionService connections on
navigation however the lifetime of a MediaPermissionDispatcher is that
of the frame it is attached to. Since frames can be navigated the
service connection must be re-established after it is closed.

To prevent a race between the browser-side close and the navigation
committing in the renderer we close the connection from that side as
well.

Bug: 725038
Change-Id: Id5d9d03537c7b7ee0997d77da4bafed055686521